提出物のデザイン崩れを修正

--- a/app/views/products/_product.html.slim
+++ b/app/views/products/_product.html.slim
@@ -1,5 +1,5 @@
 .thread
-  .thread__inner
+  .thread__inner.a-card
     header.thread-header
       h1.thread-header__title
         | #{link_to product.practice.title, product.practice, class: "thread-header__title-link"}の提出物
@@ -22,14 +22,17 @@
     .thread__description.js-target-blank.is-long-text-style.js-markdown-view
       =  product.body
     - if product.user == current_user
-      .thread-edit-tools
-        ul.thread-edit-tools__items
-          li.thread-edit-tools__item
-            = link_to edit_product_path(product), class: "thread-edit-tools__item-link is-success" do
-              i.fas.fa-pen
-          li.thread-edit-tools-item
-            = link_to product, data: { confirm: "本当によろしいですか？" }, method: :delete, class: "thread-edit-tools__item-link is-danger" do
-              i.fas.fa-trash-alt
+      .card-footer
+        .card-footer-actions
+          ul.card-footer-actions__items
+            li.card-footer-actions__item
+              = link_to edit_product_path(product), class: "card-footer-actions_action is-button-simple-md-primary is-block" do
+                i.fas.fa-pen
+                | 内容修正
+            li.card-footer-actions__item
+              = link_to product, data: { confirm: "本当によろしいですか？" }, method: :delete, class: "card-footer-actions__action is-button-simple-md-danger is-block" do
+                i.fas.fa-trash-alt
+                | 削除
 
     - if (admin_login? || adviser_login?) && product.checks.blank?
       .thread-admin-tools
