--- a/app/views/products/new.html.slim
+++ b/app/views/products/new.html.slim
@@ -8,8 +8,8 @@ header.page-header
 .page-body
   .container
     .practice-contents
-      .practice-content
-        .practice-content__header
+      .practice-content.a-card
+        .card-header
           h2.practice-content__title = t("helpers.label.practice.goal")
         .practice-content__body.is-goal.js-markdown-view.js-target-blank.is-long-text-style
           = @product.practice.goal
