デザイン崩れ修正

--- a/app/assets/stylesheets/blocks/user/_completed-practices.sass
+++ b/app/assets/stylesheets/blocks/user/_completed-practices.sass
@@ -1,10 +1,5 @@
-.completed-practices
-  padding: 1rem
-  background-color: $base
-  box-shadow: rgba(black, .2) 0 .0625rem .125rem
-  border-radius: .25rem
-
 .completed-practices__title
-  +text-block(1rem 1.45 .75rem)
-  padding-bottom: .5rem
-  border-bottom: solid 1px $background-color
+  +text-block(1rem 1.4)
+
+.completed-practices__body
+  padding: 1rem
