--- a/app/views/admin/users/edit.html.slim
+++ b/app/views/admin/users/edit.html.slim
@@ -1,6 +1,6 @@
 - content_for(:page_classes, "no-header no-footer no-recent-reports")
 
-.auth-form.is-sign-up
+.auth-form.is-sign-up.a-card
   header.auth-form__header
     h1.auth-form__title ユーザー編集
   .auth-form__body
