--- a/app/views/users/practices/_completed_practices.html.slim
+++ b/app/views/users/practices/_completed_practices.html.slim
@@ -1,5 +1,7 @@
-.completed-practices
-  h2.completed-practices__title
-    = t("completed_practices")
-  = render "completed_practices_progress", user: @user
-  = render "completed_practices_list", user: @user
+.completed-practices.a-card
+  header.card-header
+    h2.completed-practices__title
+      = t("completed_practices")
+  .completed-practices__body
+    = render "completed_practices_progress", user: @user
+    = render "completed_practices_list", user: @user
