--- a/app/assets/stylesheets/blocks/thread/_thread-list-item.sass
+++ b/app/assets/stylesheets/blocks/thread/_thread-list-item.sass
@@ -11,6 +11,29 @@
   +media-breakpoint-down(sm)
     padding-left: 3rem
 
+.thread-list-item__label
+  +position(absolute, left 0, top 0)
+  +size(3rem)
+  border-radius: 50%
+  background-color: $accent-color
+  display: flex
+  align-items: center
+  justify-content: center
+  +text-block(.75rem 1.3, center 600)
+  padding: .25rem
+  .thread-list-item.is-report &
+    background-color: #7f6fb7
+    color: $reversal-text
+  .thread-list-item.is-practice &
+    background-color: #79bcc3
+    color: $reversal-text
+  .thread-list-item.is-question &
+    background-color: #de9172
+    color: $reversal-text
+  .thread-list-item.is-page &
+    background-color: #9fc593
+    color: $reversal-text
+
 .thread-list-item__author
   +position(absolute, left 0, top 0)
 
