--- a/app/views/searchables/_searchable.html.slim
+++ b/app/views/searchables/_searchable.html.slim
@@ -1,3 +1,9 @@
-.searchable(class="#{searchable.class.to_s.tableize.singularize}")
-  .title = link_to searchable.title, searchable
-  .description = truncate searchable.description, length: 50
+.thread-list-item(class="is-#{searchable.class.to_s.tableize.singularize}")
+  .thread-list-item__inner
+    .thread-list-item__label
+      = t(searchable.class.to_s.tableize.singularize)
+    header.thread-list-item__header
+      .thread-list-item__title
+        = link_to searchable.title, searchable, class: "thread-list-item__title-link"
+    .thread-list-item__body
+      p = truncate searchable.description, length: 50
