--- a/app/views/searchables/index.html.slim
+++ b/app/views/searchables/index.html.slim
@@ -1,11 +1,11 @@
 - title "'#{params[:word]}'の検索結果"
 
-header.page-header.is-margin-bottom-0.has-border-bottom-none
+header.page-header
   .container
     .page-header__container
       h2.page-header__title = title
 
 .page-body
   .container
-    .thread-list
+    .thread-list.a-card
       = render partial: "searchables/searchable", collection: @searchables, as: :searchable, locals: { words: "" }
