i18nをたくさん削除

--- a/app/views/admin/categories/edit.html.slim
+++ b/app/views/admin/categories/edit.html.slim
@@ -1,8 +1,9 @@
+- title "カテゴリー編集"
+
 header.page-header
   .container
     .page-header__container
-      h1.page-header__title
-        = t("editing_category")
+      h1.page-header__title = title
 
 .page-body
   .container
