--- a/app/views/announcements/index.html.slim
+++ b/app/views/announcements/index.html.slim
@@ -1,4 +1,4 @@
-- title t("announcements")
+- title "お知らせ"
 
 header.page-header
   .container
@@ -10,7 +10,7 @@ header.page-header
             .page-header-actions__item
               = link_to new_announcement_path, class: "is-button-simple-md-warning" do
                 i.fa.fa-plus
-                = t("new_announcement")
+                | お知らせ作成
 
 .page-body
   .container
