--- a/app/views/application/_global_nav.slim
+++ b/app/views/application/_global_nav.slim
@@ -11,44 +11,37 @@ nav.global-nav.js-show-mobile-nav__target.js-show-mobile-nav
           = link_to announcements_path, class: "global-nav-links__link #{current_link /^announcements/}" do
             .global-nav-links__link-icon
               i.fas.fa-bullhorn
-            .global-nav-links__link-label
-              = t("announcements")
+            .global-nav-links__link-label お知らせ
         li.global-nav-links__item
           = link_to course_practices_path(current_user.course), class: "global-nav-links__link #{current_link /^(courses-practices|practices)-/}" do
             .global-nav-links__link-icon
               i.fas.fa-book
-            .global-nav-links__link-label
-              = t("practices")
+            .global-nav-links__link-label プラクティス
         li.global-nav-links__item
           = link_to reports_path, class: "global-nav-links__link #{current_link /^reports/}" do
             .global-nav-links__link-icon
               i.fas.fa-pen
-            .global-nav-links__link-label
-              = t("reports")
+            .global-nav-links__link-label 日報
         li.global-nav-links__item
           = link_to questions_path, class: "global-nav-links__link #{current_link /^questions/}" do
             .global-nav-links__link-icon
               i.fas.fa-question
-            .global-nav-links__link-label
-              = t("questions")
+            .global-nav-links__link-label Q&A
         li.global-nav-links__item
           = link_to users_path, class: "global-nav-links__link #{current_link /^users/}" do
             .global-nav-links__link-icon
               i.fas.fa-users
-            .global-nav-links__link-label
-              = t("users")
+            .global-nav-links__link-label ユーザー
         li.global-nav-links__item
           = link_to "/pages", class: "global-nav-links__link #{current_link /^pages/}" do
             .global-nav-links__link-icon
               i.fas.fa-file
-            .global-nav-links__link-label
-              | wiki
+            .global-nav-links__link-label Wiki
         li.global-nav-links__item
           = link_to "https://docs.google.com/spreadsheets/d/1tRexM59inK1u5unRrNFNUNXXltiRQDNZZJf7X-M_G1E/edit#gid=2063800206", class: "global-nav-links__link", target: "_blank" do
             .global-nav-links__link-icon
               i.fas.fa-desktop
-            .global-nav-links__link-label
-              | 座席予約
+            .global-nav-links__link-label 座席予約
         li.global-nav-links__item.is-hidden-md-up
           = link_to courses_path, class: "global-nav-links__link #{current_link /^courses-index/}" do
             .global-nav-links__link-icon
@@ -59,11 +52,9 @@ nav.global-nav.js-show-mobile-nav__target.js-show-mobile-nav
             = link_to admin_root_path, class: "global-nav-links__link" do
               .global-nav-links__link-icon
                 i.fab.fa-font-awesome-flag
-              .global-nav-links__link-label
-                | 管理ページ
+              .global-nav-links__link-label 管理ページ
         li.global-nav-links__item.is-hidden-md-up
           = link_to logout_path, class: "global-nav-links__link" do
             .global-nav-links__link-icon
               i.fas.fa-sign-out-alt
-            .global-nav-links__link-label
-              | サインアウト
+            .global-nav-links__link-label サインアウト
