--- a/app/views/practices/edit.html.slim
+++ b/app/views/practices/edit.html.slim
@@ -1,7 +1,8 @@
+- title "プラクティス編集"
+
 .page-header
   .container
     .page-header__container
-      h1.page-header__title
-        = t("editing_practice")
+      h1.page-header__titla = title
 .container
   = render "form", practice: @practice
