--- a/app/views/practices/questions/index.html.slim
+++ b/app/views/practices/questions/index.html.slim
@@ -6,7 +6,7 @@ header.page-header
       .page-header__action
         = link_to practices_path, class: "is-button-simple-md-secondary" do
           i.fa.fa-angle-left
-          = t("practices")
+          | プラクティス
 
 = render "page_tabs", resource: @practice
 
