--- a/app/views/products/show.html.slim
+++ b/app/views/products/show.html.slim
@@ -10,6 +10,6 @@ header.page-header
     = render "comments/comments", comments: @product.comments.order(:created_at).page(params[:page]), form_visibility: true
     - if @footprints.any?
       .footprints
-        h3.footprints__title = t("we_checked")
+        h3.footprints__title 見たよ
         ul.footprints__items
           = render @footprints
