--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -4,11 +4,10 @@
 header.page-header
   .container
     .page-header__container
-      h2.page-header__title
-        = t("new_question")
+      h2.page-header__title みんなに聞く
       = link_to questions_path, class: "is-button-simple-md-secondary" do
         i.fas.fa-angle-left
-        = t("to_index_of_questions")
+        | Q&A一覧へ
 .page-body
   .container
     = render "form", question: @question, categories: @categories
