--- a/app/views/reports/_reports.slim
+++ b/app/views/reports/_reports.slim
@@ -14,7 +14,7 @@
                 i.fas.fa-pen
               = link_to new_report_path(id: report), class: "thread-list-item__actions-link" do
                 i.fas.fa-copy
-              = link_to report_path(report), data: { confirm: t("are_you_sure") }, method: :delete, class: "thread-list-item__actions-link" do
+              = link_to report_path(report), data: { confirm: "本当によろしいですか？" }, method: :delete, class: "thread-list-item__actions-link" do
                 i.fas.fa-trash-alt
         .thread-list-item-meta
           time.thread-list-item-meta__updated-at(datetime="#{report.updated_at.to_datetime}" pubdate="pubdate")
