--- a/app/views/user_mailer/reset_password_email.text.erb
+++ b/app/views/user_mailer/reset_password_email.text.erb
@@ -1,9 +1,9 @@
-<%= t("greeting", recipient: "#{@user.last_name} #{@user.first_name}") %>
+こんにちは、<%= "#{@user.last_name} #{@user.first_name}" %>さん
 
-<%= t("someone_wanted_to_reset_the_password") %>
+誰かがパスワードの再設定を希望しました。
 
-<%= t("if_you_did_not_wish_please_disregard_this_email") %>
+あなたが希望したのではないのなら、このメールは無視してください。
 
 <%= @url %>
 
-<%= t("the_password_will_not_be_changed_until_you_access_the_link_above_and_set_a_new_password") %>
+上のリンクにアクセスして新しいパスワードを設定するまで、パスワードは変更されません。
