--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -94,7 +94,7 @@
       ul.auth-form-item__checkboxes
         li.auth-form-checkbox
           label.auth-form-checkbox__label.js-nda-action(data-target="#nda-modal" data-toggle="modal")
-            = t("agree_nda")
+            | 秘密保持契約に同意する
 
   .auth-form-action.is-sign-up-action
     ul.auth-form-action__items
