--- a/app/views/admin/companies/index.html.slim
+++ b/app/views/admin/companies/index.html.slim
@@ -1,4 +1,6 @@
-h1 = t("listing_companies")
+- title "会社"
+
+h1 = title
 table.table
   tr
     th = t("helpers.label.company.name")
@@ -12,7 +14,7 @@ table.table
       td = company.name
       td = company.description
       td = company.website
-      td = link_to t("show"), [:admin, company]
-      td = link_to t("edit"), edit_admin_company_path(company)
-      td = link_to t("destroy"), [:admin, company], data: { confirm: t("are_you_sure") }, method: :delete
-= link_to t("new_company"), new_admin_company_path, class: "btn btn-primary"
+      td = link_to "表示", [:admin, company]
+      td = link_to "編集", edit_admin_company_path(company)
+      td = link_to "削除", [:admin, company], data: { confirm: "本当によろしいですか？" }, method: :delete
+= link_to "会社作成", new_admin_company_path, class: "btn btn-primary"
