--- a/app/views/application/_active_users.html.slim
+++ b/app/views/application/_active_users.html.slim
@@ -1,4 +1,4 @@
-h4 = t("learning_users")
+h4 学習中ユーザー
 - active_users = User.where("accessed_at > ?", 10.minutes.ago)
 - active_users.each do |user|
   p
