--- a/app/views/practices/_form.html.slim
+++ b/app/views/practices/_form.html.slim
@@ -40,7 +40,7 @@
       = f.label :submission, class: "a-label"
       label
         = f.check_box :submission
-        = t("check_if_user_shold_submit_a_product")
+        | 提出物がある場合はチェック
   .form-actions
     ul.form-actions__items
       li.form-actions__item.is-main
