--- a/app/views/practices/_practice.html.slim
+++ b/app/views/practices/_practice.html.slim
@@ -15,10 +15,12 @@
           - %i(not_complete started complete).each do |status|
             - if practice.status(current_user) == status
               li
-                button.btn.btn-success.js-practice-state.is-button-simple-xs-primary(class="#{status}" data-status="#{status}" disabled) = t(status)
+                button.btn.btn-success.js-practice-state.is-button-simple-xs-primary(class="#{status}" data-status="#{status}" disabled)
+                  = t("activerecord.enums.learning.status.#{status}")
             - else
               li
-                button.btn.btn-secondary.js-practice-state.is-button-simple-xs-secondary(class="#{status}" data-status="#{status}") = t(status)
+                button.btn.btn-secondary.js-practice-state.is-button-simple-xs-secondary(class="#{status}" data-status="#{status}")
+                  = t("activerecord.enums.learning.status.#{status}")
   - if current_user.admin?
     .category-practices-item__handle.js-show-handle__target
       ul.is-button-group
