--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -13,7 +13,7 @@ header.page-header
           li.page-header-actions__item
             = link_to questions_path, class: "is-button-simple-md-secondary" do
               i.fas.fa-angle-left
-              = t("to_index_of_questions")
+              | Q&A一覧へ
 
 .page-body
   .container
@@ -45,7 +45,7 @@ header.page-header
                     i.fas.fa-pen#new
                     | 内容修正
                 li.card-footer-actions__item
-                  = link_to question_path(@question), data: { confirm: t("are_you_sure") }, method: :delete, class: "card-footer-actions__action is-button-simple-md-danger is-block" do
+                  = link_to question_path(@question), data: { confirm: "本当によろしいですか？" }, method: :delete, class: "card-footer-actions__action is-button-simple-md-danger is-block" do
                     i.fas.fa-trash-alt#delete
                     | 削除
 
