--- a/app/views/reports/edit.html.slim
+++ b/app/views/reports/edit.html.slim
@@ -1,10 +1,10 @@
+- title "日報編集"
 - content_for(:page_classes, "no-recent-reports")
 
 header.page-header
   .container
     .page-header__container
-      h2.page-header__title
-        = t("editing_report")
+      h2.page-header__title = title
 
 .page-body
   .container
