--- a/app/views/reports/show.html.slim
+++ b/app/views/reports/show.html.slim
@@ -1,17 +1,18 @@
 - title @report.title
+
 header.page-header
   .container
     .page-header__container
-      h1.page-header__title 日報
+      h1.page-header__title = title
       .page-header-actions
         ul.page-header-actions__items
           li.page-header-actions__item
             = link_to new_report_path, class: "page-header-actions__items-link is-button-simple-md-warning" do
               i.fas.fa-plus
-              = t("new_report")
+              | 日報作成
           li.page-header-actions__item
             = link_to reports_path, class: "page-header-actions__items-link is-button-simple-md-secondary" do
-              = t("to_index_of_reports")
+              | 日報一覧へ
 
 .page-body
   .container
@@ -19,6 +20,6 @@ header.page-header
     = render "comments/comments", comments: @report.comments.order(:created_at).page(params[:page]), form_visibility: true
     - if @footprints.any?
       .footprints
-        h3.footprints__title = t("we_checked")
+        h3.footprints__title 見たよ
         ul.footprints__items
           = render @footprints
