--- a/app/views/users/_nda_modal.html.slim
+++ b/app/views/users/_nda_modal.html.slim
@@ -20,7 +20,7 @@
                       = f.check_box :nda, checked: false
                     - else
                       = f.check_box :nda, checked: true
-                    div = t("agree_nda")
+                    div 秘密保持契約に同意する
 
           .nda__close(aria-label="Close" data-dismiss="modal" type="button")
             | 閉じる
