コースにカテゴリー編集を追加

--- a/app/views/courses/_form.html.slim
+++ b/app/views/courses/_form.html.slim
@@ -14,6 +14,10 @@
         .a-label
           | プレビュー
         .js-preview.is-long-text-style.markdown-form__preview
+  .form-item
+    .row
+      .col-md-6.col-xs-12
+        = f.collection_check_boxes :category_ids, Category.all, :id, :name
   .form-actions
     ul.form-actions__items
       li.form-actions__item
