チェックボックスにデザイン

--- a/app/assets/stylesheets/atoms/_form.sass
+++ b/app/assets/stylesheets/atoms/_form.sass
@@ -3,7 +3,7 @@
   width: 100%
   padding: .5rem
   background-color: #f7f7f7
-  border: solid 1px #c1c5b9
+  border: solid 1px $input-border
   border-radius: .25rem
   transition: border-color .2s ease-in, background-color .2s ease-in, box-shadow .2s ease-in
   +media-breakpoint-down(sm)
@@ -20,7 +20,7 @@
   width: 100%
   padding: .5rem
   background-color: #f7f7f7
-  border: solid 1px #c1c5b9
+  border: solid 1px $input-border
   border-radius: .25rem
   transition: border-color .2s ease-in, background-color .2s ease-in, box-shadow .2s ease-in
   +media-breakpoint-down(sm)
@@ -34,7 +34,7 @@
   width: 100%
   padding: .5rem
   background-color: #f7f7f7
-  border: solid 1px #c1c5b9
+  border: solid 1px $input-border
   border-radius: .25rem
   transition: border-color .2s ease-in, background-color .2s ease-in, box-shadow .2s ease-in
   +media-breakpoint-down(sm)
@@ -65,7 +65,7 @@ textarea.a-sm-text-input
   width: 100%
   padding: .25rem .5rem
   background-color: #f7f7f7
-  border: solid 1px #c1c5b9
+  border: solid 1px $input-border
   border-radius: .25rem
   transition: border-color .2s ease-in, background-color .2s ease-in, box-shadow .2s ease-in
   +media-breakpoint-down(sm)
