--- a/app/assets/stylesheets/settings/variables/_0colors.sass
+++ b/app/assets/stylesheets/settings/variables/_0colors.sass
@@ -26,11 +26,13 @@ $gray-lightest: #f7f7f9
 $stamp-color: #ed5151
 $badge-color: #e54724
 
-$primary: #304ca2
+$primary: #229bcc
 $success: #98c96c
 $info: #289a60
 $warning: #fabd17
 $danger: #dc4268
+
+$input-border: #c1c5b9
 
 =default-link
   transition: color .2s ease-in
