--- a/app/assets/stylesheets/settings/variables/_sanitize.sass
+++ b/app/assets/stylesheets/settings/variables/_sanitize.sass
@@ -1,4 +1,4 @@
-$button-styles: standard, simple
+$button-styles: border, simple
 
 $small-column-horizontal-padding: 2rem
 $xs-small-column-horizontal-padding: 1rem
