rubocopの指摘点を修正

--- a/app/views/courses/_form.html.slim
+++ b/app/views/courses/_form.html.slim
@@ -19,7 +19,7 @@
       .col-md-6.col-xs-12
         .checkboxes
           ul.checkboxes__items
-            = f.collection_check_boxes :category_ids, Category.all, :id, :name, { class: "label-checkbox" } do |b|
+            = f.collection_check_boxes :category_ids, Category.all, :id, :name, class: "label-checkbox" do |b|
               li.checkboxes__item
                 = b.label { b.check_box + b.text }
   .form-actions
