--- a/app/views/home/_administrator.slim
+++ b/app/views/home/_administrator.slim
@@ -70,10 +70,10 @@ section.welcome-section.is-administrator#administrator
               td 合同会社フィヨルド
             tr
               th 所在地
-              td 〒151-0071 東京都渋谷区本町1-36-11 ドエルヤマト 203
+              td 〒156-0043 東京都世田谷区松原2-34-11 ベルヴィカワダ201号室
             tr
               th 最寄り駅
-              td 初台（京王新線）
+              td 明大前（京王線・井の頭線）・下高井戸（京王線）
             tr
               th 設立
               td 2007年12月7日
